# churn_prediction

./: .gitignore  README.md  eda.py  pyproject.toml
data_pipeline/transform/: churn_label.py
